--- a/webapp.service
+++ b/webapp.service
@@ -7,7 +7,7 @@ Type=simple
 User=csye6225
 Group=csye6225
 WorkingDirectory=/opt/myapp
-ExecStart=/opt/myapp/webapp
+ExecStart=/usr/bin/go run .
 Restart=always
 RestartSec=3
 StandardOutput=syslog
