--- a/.github/workflows/integration-tests-for-go-app.yml
+++ b/.github/workflows/integration-tests-for-go-app.yml
@@ -5,6 +5,9 @@ on: pull_request
 jobs:
   integration-tests:
     runs-on: ubuntu-latest
+    env:
+      ENV: "github"
+      GO_VERSION: "1.21.6"
 
     services:
       postgres:
@@ -31,14 +34,21 @@ jobs:
       - name: Set up Go 1.21.6
         uses: actions/setup-go@v5.0.0
         with:
-          go-version: "1.21.6"
+          go-version: ${{ env.GO_VERSION }}
       - run: go version
 
       - name: Get all dependencies based on go.mod
         run: go mod download
 
-      - name: Set up environment variables
-        run: echo "DB_DSN=host=localhost port=5432 user=postgres password=postgres dbname=postgres sslmode=disable" >> $GITHUB_ENV
+      - name: Setup github runner environment variables for integration tests
+        run: |
+          { 
+            echo "DB_HOST=localhost"; 
+            echo "DB_PORT=5432"; 
+            echo "DB_USER=postgres"; 
+            echo "DB_PASSWORD=postgres"; 
+            echo "DB_NAME=postgres" 
+          } >> $GITHUB_ENV
 
       - name: Run integration tests
         run: go test -v ./...
