--- a/.github/workflows/webapp-integration-tests.yml
+++ b/.github/workflows/webapp-integration-tests.yml
@@ -1,18 +1,13 @@
-name: Packer workflow
+name: Webapp workflow
 
-on:
-  pull_request:
-    types:
-      - closed
+on: pull_request
 
 jobs:
-  packer-build-custom-image:
-    if: github.event.pull_request.merged == true
+  integration-tests:
     runs-on: ubuntu-latest
     env:
       ENV: "github"
       GO_VERSION: "1.21.6"
-      PACKER_VERSION: "1.10.1"
 
     services:
       postgres:
@@ -33,7 +28,7 @@ jobs:
           --health-retries 5
 
     steps:
-      - name: Check out code into app directory
+      - name: Check out code into the Go module directory
         uses: actions/checkout@v4
 
       - name: Set up Go 1.21.6
@@ -57,23 +52,3 @@ jobs:
 
       - name: Run integration tests
         run: go test -v ./...
-
-      - name: Build the application
-        run: |
-          go build -ldflags="-linkmode external -extldflags -static" -o webapp
-          echo "Application built successfully"
-
-      - name: Authenticate Packer to Google Cloud via service sccount key
-        uses: google-github-actions/auth@v2
-        with:
-          credentials_json: ${{ secrets.PACKER_SERVICE_ACCOUNT}}
-
-      - name: Setup `packer`
-        uses: hashicorp/setup-packer@main
-        with:
-          version: ${{ env.PACKER_VERSION }}
-
-      - name: Build the custom image using Packer
-        run: |
-          packer init .
-          packer build .
