--- a/.github/workflows/build-custom-image-and-deploy.yml
+++ b/.github/workflows/build-custom-image-and-deploy.yml
@@ -74,14 +74,13 @@ jobs:
 
 
 
-
       # Start update vm instances
       - name: Create new Instance Template version
         id: create-instance-template
         run: |
           LATEST_IMAGE=$(gcloud compute images describe-from-family ${{ secrets.IMAGE_FAMILY }} --project=${{ secrets.PROJECT_ID }} --format="get(name)")
-          NEW_TEMPLATE_NAME="instance-template-$(date +%Y%m%d%H%M%S)"
-          gcloud compute instance-templates create ${NEW_TEMPLATE_NAME} \
+          echo "NEW_TEMPLATE_NAME='instance-template-$(date +%Y%m%d%H%M%S)'" >> $GITHUB_ENV
+          gcloud compute instance-templates create ${{env.NEW_TEMPLATE_NAME}} \
             --instance-template-region=${{ secrets.REGION }} \
             --machine-type=${{ secrets.MACHINE_TYPE }} \
             --image=${LATEST_IMAGE} \
@@ -110,25 +109,25 @@ jobs:
 
       - name: Configure instance group to use new template
         run: |
-          NEW_TEMPLATE_SELF_LINK=$(gcloud compute instance-templates describe ${steps.create-instance-template.outputs.new_template_name} \
+          NEW_TEMPLATE_SELF_LINK=$(gcloud compute instance-templates describe ${{env.NEW_TEMPLATE_NAME}} \
             --region=${{ secrets.REGION }} \
             --format="value(selfLink)")
-          INSTANCE_GROUP_NAME=$(gcloud compute instance-groups managed list --region=${{ secrets.REGION }} --format="value(name)")
-          gcloud compute instance-groups managed set-instance-template ${INSTANCE_GROUP_NAME} \
+          echo "INSTANCE_GROUP_NAME=$(gcloud compute instance-groups managed list --region=${{ secrets.REGION }} --format="value(name)")" >> $GITHUB_ENV
+          gcloud compute instance-groups managed set-instance-template ${{env.INSTANCE_GROUP_NAME}} \
             --template=${NEW_TEMPLATE_SELF_LINK} \
             --region=${{ secrets.REGION }}
 
       - name: Make managed instance group to start basic rolling update
         run: |
-          gcloud compute instance-groups managed rolling-action start-update ${INSTANCE_GROUP_NAME} \
-            --version=template=${steps.create-instance-template.outputs.new_template_name} \
+          gcloud compute instance-groups managed rolling-action start-update ${{env.INSTANCE_GROUP_NAME}} \
+            --version=template=${{env.NEW_TEMPLATE_NAME}} \
             --region=${{ secrets.REGION }} \
             --min-ready=3m \
             --max-unavailable=3
 
       - name: Wait for MIG update to complete
         run: |
-          while [[ $(gcloud compute instance-groups managed describe ${steps.create-instance-template.outputs.new_template_name} \
+          while [[ $(gcloud compute instance-groups managed describe ${{env.INSTANCE_GROUP_NAME}} \
             --region ${{secrets.REGION}} \
             --format="get(status.isStable)") != "True" ]]; do
             echo "The update is still in progress"
